--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div id="app">
     <h1>Otwórz Skrzynkę!</h1>
+    <img src=baner.jpg>
     <div id="result"></div>
   </div>
   <div id="login" style="display: block;">
