--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <div id="app">
     <h1>Otwórz Skrzynkę!</h1>
-    <img src="images/baner.jpg">
+     <div id="banner">
+        <img src="images/baner.jpg" alt="Baner" style="width: 100%; max-height: 300px; object-fit: cover;">
+    </div>
     <div id="result"></div>
   </div>
   <div id="login" style="display: block;">
